Fix doc item spacing

--- a/v3/src/css/custom.scss
+++ b/v3/src/css/custom.scss
@@ -33,6 +33,10 @@
 	--ifm-toc-border-color: #ffffff1a;
 	--ifm-navbar-height: 100px;
 
+	// Spacing
+	--ifm-container-width-xl: 1200px;
+	--ifm-container-max-width: 1000px;
+
 	// Navbar customization
 	--ifm-navbar-background-color: #191a1c;
 	--ifm-navbar-height: 110px;
